--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,7 +8,8 @@
     .card-title {
       position: absolute;
       top: 36%;
-      font-size: 2.0em;
+      font-size: 3.5em;
+      cursor: pointer;
       width: 100%;
       font-weight: bold;
       color: #fff;
@@ -26,8 +27,14 @@
   
   }
 
-  
- 
+.offerImg{
+  height:180px;
+  cursor: pointer;
+}
+.categoryImg{
+  height:190px;
+  cursor: pointer;
+} 
 
   ion-content{
     position: relative !important;
